# voting-sim

./: .clang-format  .clang-tidy  .envrc  CMakeLists.txt  Makefile
include/voting_sim/: ballot.hpp  candidate.hpp  election.hpp  generator.hpp  irv_election.hpp  results.hpp  scenario.hpp
include/voting_sim/scenarios/: irv_examples.hpp
src/: CMakeLists.txt  generator.cpp  irv_election.cpp  main.cpp
tests/: CMakeLists.txt  test_generator.cpp  test_main.cpp
